--- a/Website/html/courses.html
+++ b/Website/html/courses.html
@@ -106,7 +106,7 @@
                             class="dropdown-toggle d-flex align-items-center hidden-arrow"
                             href="#" id="navbarDropdownMenuAvatar" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img id="profile-nav-pic"
+                            <img id="ProfilePicNavBar"
                                 src="../assets/images/Profile.png"
                                 class="rounded-circle"
                                 height="25"
@@ -282,5 +282,7 @@
         <script src="../javascript/DisplyCourseCardScript.js"></script>
         <script type="module" src="../javascript/general.js"></script>
         <script src="../javascript/nav-bar.js"></script>
+        <script src="../javascript/functions.js"></script>
+
     </body>
 </html>
