--- a/Website/html/joinCourse.html
+++ b/Website/html/joinCourse.html
@@ -144,8 +144,7 @@
                             style="align-items: center;"></div>
                         <div class="col-md-10">
                             <img src="../assets/images/user.gif" width="250px">
-                            <h1 class="text-center">your account has been
-                                activated successfully !</h1>
+                            <h1 class="text-center">Join Course</h1>
 
                         </div>
                         <div class="col-md-1"></div>
