--- a/Website/html/weeks.html
+++ b/Website/html/weeks.html
@@ -114,7 +114,8 @@
                             class="dropdown-toggle d-flex align-items-center hidden-arrow"
                             href="#" id="navbarDropdownMenuAvatar" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img
+                            <img 
+                                id="ProfilePicNavBar"
                                 src="../assets/images/Profile.png"
                                 class="rounded-circle"
                                 height="25"
@@ -152,8 +153,7 @@
                     </div>
                     <div class="col">
                         <div class="pageName">
-                            <h1 id="page-h1-text-fullPage">Data Structures and
-                                Algorithms</h1>
+                            <h1 id="page-h1-text-fullPage">FCI Luxor University</h1>
                             <h5 id="page-h5-text-fullPage">Level 3 (computer
                                 science)</h5>
                             <h6 id="page-h6-text-fullPage">Student Page</h6>
