--- a/Website/html/login.html
+++ b/Website/html/login.html
@@ -107,7 +107,7 @@
                             </div>
                             <div class="col-md-12">
                                 <br>
-                                <input
+                                <input type="password"
                                     class="form-control"
                                     placeholder="Password"
                                     id="password" name="password">
