--- a/Website/html/joinCourse.html
+++ b/Website/html/joinCourse.html
@@ -138,6 +138,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                     <br><br>
+                    <br><br>
 
                     <div class="row" style="text-align: center;">
                         <div class="col-md-1"
@@ -145,11 +146,14 @@
                         <div class="col-md-10">
                             <img src="../assets/images/user.gif" width="250px">
                             <h1 class="text-center">Join Course</h1>
-
+                            <p class="text-center">Enter your course ID to join
+                                the course and start learning</p>
+                            <br>
                         </div>
                         <div class="col-md-1"></div>
                     </div>
 
+                    <br>
                     <div class="check-mail text-center">
 
                         <div class="form-group text-center">
@@ -187,7 +191,7 @@
                         </div>
 
                     </div>
-
+                    <br>
                     <div class="row">
                         <div class="col-md-3"></div>
                         <div class="col-md-6">
